; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_backend_data.c_BackendManagementShmemSize.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_backend_data.c_BackendManagementShmemSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @BackendManagementShmemSize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @BackendManagementShmemSize() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  store i64 0, i64* %1, align 8
  %3 = call i32 (...) @TotalProcCount()
  store i32 %3, i32* %2, align 4
  %4 = load i64, i64* %1, align 8
  %5 = call i64 @add_size(i64 %4, i32 4)
  store i64 %5, i64* %1, align 8
  %6 = load i64, i64* %1, align 8
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @mul_size(i32 4, i32 %7)
  %9 = call i64 @add_size(i64 %6, i32 %8)
  store i64 %9, i64* %1, align 8
  %10 = load i64, i64* %1, align 8
  ret i64 %10
}

declare dso_local i32 @TotalProcCount(...) #1

declare dso_local i64 @add_size(i64, i32) #1

declare dso_local i32 @mul_size(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
